# match-tty

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: example_draw.cpp.8DD03329C58FFFFF.idx  main.cpp.0BF116C524B38737.idx  mj-8pins.h.F6E19B451C1C2548.idx  scene.h.520452EC1497E021.idx  test_dom.cpp.D7F290394E274F0C.idx  test_match.cpp.A4DDACE53430C736.idx  test_screen.cpp.E5740D53577B8CC7.idx
cmake/: FindCatch2.cmake  Findlyra.cmake  Findquill.cmake
docs/: plan-fall-down-annimation.md
examples/: CMakeLists.txt  example_draw.cpp  slice.cpp
include/: CMakeLists.txt
include/match-tty/: Banners.h  MainComponent.h
include/match-tty/algo/: match.h  scene.h
include/match-tty/assets/: common.h  components.h  mj-8pins.h
include/match-tty/game/: AnimState.h  EliminateState.h  FallDownState.h  FlashState.h  GameBoardState.h  GridGenerator.h  ScoreBar.h  SwapBackwardState.h  SwapForwardState.h  SwapUtils.h  TimeBar.h
include/match-tty/modifiers/: clip.h
include/match-tty/utils/: Logger.h
src/: Banners.cpp  CLI.cpp  CLI.h  CMakeLists.txt  FallDownState.cpp  GameBoardState.cpp  GridGenerator.cpp  Logger.cpp  MainComponent.cpp  MainComponent.h  main.cpp
tests/: CMakeLists.txt  test_match.cpp
